updating bower and package json files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch-sass": "npm run build-sass & node-sass -wr src/sass/all.scss dist/css/wood.css",
     "watch-js": "watchify src/js/all.js -o dist/js/wood.js -dv",
     "watch": "npm run watch-sass & npm run watch-js",
-    
+
     "build-sass": "node-sass src/sass/all.scss dist/css/wood.css",
     "build-js": "browserify src/js/all.js > dist/js/wood.js",
     "build": "npm run build-sass & npm run build-js",
@@ -26,7 +26,7 @@
     "bdist-js": "browserify src/js/all.js | uglifyjs -mc > dist/js/wood.min.js",
     "bdist": "npm run bdist-sass & npm run bdist-js",
 
-    "deploy:prod": "npm run bdist && npm run version:patch && npm run push:git && npm run publish",
+    "deploy": "npm run bdist && npm run version:patch && npm run push:git && npm run publish",
     "version:patch": "npm version patch && bower version patch",
     "publish": "npm publish",
     "push:git": "git push --tags origin HEAD:master"
