--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "bdist-sass": "node-sass --output-style compressed src/sass/all.scss dist/css/wood.min.css",
     "bdist-js": "browserify src/js/all.js | uglifyjs -mc > dist/js/wood.min.js",
     "bdist": "npm run bdist-sass & npm run bdist-js",
-    "deploy": "npm run bdist && npm run version:patch && npm run push:git && npm run publish",
+    "deploy": "npm run bdist && npm run version:patch && npm run push:git",
     "version:patch": "npm version patch",
-    "publish": "npm publish",
     "push:git": "git push --tags origin HEAD:master"
   },
   "dependencies": {
