--- a/package.json
+++ b/package.json
@@ -23,27 +23,16 @@
     "bdist-sass": "node-sass --output-style compressed src/sass/all.scss dist/css/wood.min.css",
     "bdist-js": "browserify src/js/all.js | uglifyjs -mc > dist/js/wood.min.js",
     "bdist": "npm run bdist-sass & npm run bdist-js",
-    "deploy": "npm run bdist && npm run version:patch && npm run push:git && npm publish",
+    "deploy": "npm run bdist && npm run build && npm run version:patch && npm run push:git && npm publish",
     "version:patch": "npm version patch -m \"Release v%s\"",
     "push:git": "git push --tags origin HEAD:master"
-  },
-  "dependencies": {
-    "bootstrap-sass": "3.3.5",
-    "bootstrap-dialog": "",
-    "bootstrap-select": "1.6.4",
-    "backbone": "1.1.2",
-    "datatables": "1.10.7",
-    "datatables-scroller": "1.2.1",
-    "datatables-tabletools": "2.2.2",
-    "datatables-colresize": "0.0.10",
-    "font-awesome": "",
-    "fuelux": "",
-    "marionette": "2.4.2",
-    "underscore.string": "3.0.3"
   },
   "devDependencies": {
     "browserify": "",
     "express": "^4.13.0",
+    "grunt": "",
+    "grunt-cli": "",
+    "grunt-bowercopy": "",
     "uglify-js": "",
     "watchify": "",
     "node-sass": ""
