--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "datatables-colresize": "0.0.10",
     "font-awesome": "",
     "fuelux": "",
-    "material-design-iconic-font": "",
+    "material-design-icons": "2.2.1",
     "marionette": "2.4.2",
     "underscore.string": "3.0.3"
   }
