--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-libs-browser": "^0.5.3",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
+    "semistandard": "^8.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.2",
